Fixed #chatClientWrap to .chatClientWrap

--- a/mndp.css
+++ b/mndp.css
@@ -11,7 +11,7 @@ body { background-color: #00d000; }
   width:400px !important;
   font-size:60%;
 }
-#chat,#chatWrapper,#chatClientWrap {
+#chat,#chatWrapper,.chatClientWrap {
   bottom:0 !important;
   left:0 !important;
   right:0 !important;
